--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,12 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   freezed_annotation: ^3.0.0
+  geolocator: ^14.0.0
   go_router: ^14.8.1
   json_annotation: ^4.9.0
+  permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
