--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: geoalert
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,8 +9,12 @@ environment:
 dependencies:
   connectivity_plus: ^6.1.3
   dio: ^5.8.0+1
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
   flutter:
     sdk: flutter
+  flutter_background_service: ^5.1.0
+  # flutter_local_notifications: ^19.1.0
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   freezed_annotation: ^3.0.0
@@ -19,7 +23,6 @@ dependencies:
   json_annotation: ^4.9.0
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
-  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
