--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_background_service: ^5.1.0
-  # flutter_local_notifications: ^19.1.0
+  flutter_local_notifications: ^19.1.0
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   freezed_annotation: ^3.0.0
