--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   connectivity_plus: ^6.1.3
+  curved_navigation_bar: ^1.0.6
   dio: ^5.8.0+1
   firebase_core: ^3.13.0
   firebase_messaging: ^15.2.5
