--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,9 +7,14 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <!-- For Android 13+ -->
 
     <application android:name=".Application" android:label="geoalert" android:icon="@mipmap/ic_launcher">
+
 
         <!-- Background Service -->
         <service android:name="id.flutter.flutter_background_service.BackgroundService" android:enabled="true" android:exported="false" tools:replace="android:exported" android:foregroundServiceType="location"/>
