--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  audioplayers: ^6.4.0
   connectivity_plus: ^6.1.3
   curved_navigation_bar: ^1.0.6
   dio: ^5.8.0+1
@@ -21,9 +22,11 @@ dependencies:
   freezed_annotation: ^3.0.0
   geolocator: ^14.0.0
   go_router: ^14.8.1
+  jiffy: ^6.4.3
   json_annotation: ^4.9.0
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
+  waveform_recorder: ^1.7.0
 
 dev_dependencies:
   flutter_test:
