--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,17 @@ dependencies:
     sdk: flutter
   flutter_background_service: ^5.1.0
   flutter_local_notifications: ^19.1.0
+  flutter_map: ^8.1.1
   flutter_riverpod: ^2.6.1
+  flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.0.17
   freezed_annotation: ^3.0.0
   geolocator: ^14.0.0
   go_router: ^14.8.1
   jiffy: ^6.4.3
   json_annotation: ^4.9.0
+  latlong2: ^0.9.1
+  open_route_service: ^1.2.7
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
   waveform_recorder: ^1.7.0
