--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   open_route_service: ^1.2.7
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
+  toastification: ^3.0.2
   waveform_recorder: ^1.7.0
 
 dev_dependencies:
