--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,3 +2,6 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     use_build_context_synchronously: ignore
+
+formatter:
+  trailing_commas: preserve
